--- a/ui/styles/police.css
+++ b/ui/styles/police.css
@@ -1,57 +1,60 @@
 .content {
     position: absolute;
     border-radius: 5px;
-    background-color: #011b37;
+    background:rgb(1, 27, 55);
     width: 75%;
     height: 80%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    user-select: none;
 }
+
 .content h2 {
     font-family: "Arial Black";
-    user-select: none;
     color: #fbbe28;
     margin: 1px 1px 1px 1px;
 }
 .content h3 {
     font-family: "Arial Black";
-    user-select: none;
+     none;
     color: #fbbe28;
     margin: 1px 1px 1px 1px;
+    user-select: text;
 }
 .content h4 {
     font-family: "Courier";
     font-weight: bolder;
     font-size: 14px;
-    user-select: none;
     color: #00a2d6;
     margin: 1px 1px 1px 1px;
+    user-select: text;
 }
 .content li {
-    font-family: "Courier";
-    font-weight: bolder;
-    color: white;
+    font-family: "Arial";
+    font-weight: 780;
+    color: black;
     float: left;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-right: 2px solid #fbbe28;
+    padding-left: 18px;
+    padding-right: 18px;
+    font-size:14px;
 }
 .content li:last-child {
     border-right: none;
 }
 .content button {
     background-color: #fbbe28;
-    color: #011b37;
+    color: black;
     font-family: "Arial";
     font-weight: bolder;
     border: 4px solid #fbbe28;
     font-size: 12pt;
     text-align: center;
     padding: 4px 3px;
+    user-select: none;
 }
 .content input {
-    background-color: #011b37;
+    background-color: #373737;
     font-family: "Courier New";
     border: 2px solid #fbbe28;
     color: #00a2d6;
@@ -64,7 +67,7 @@
     text-align: left;
 }
 .content textarea {
-    background-color: #011b37;
+    background-color: #373737;
     white-space: pre-line;
     white-space: pre-wrap;
     font-family: "Courier New";
@@ -111,7 +114,7 @@
     border-left: 2px solid #fbbe28; 
 }
 .content tr:not(:first-child):hover {
-    background-color: #00152c;
+    background-color: #2c2c2c;
 }
 .content button:hover {
     background-color: #00a2d6;
@@ -128,14 +131,12 @@
     top: 1.5%;
     max-width: 160px;
     height: auto;
-    background-color: #011b37;
 }
 .mugshot {
     display: inline-block;
     max-width: 215px;
     height: auto;
     border: 2px solid #fbbe28;
-    user-select: none;
 }
 .notification {
     display: none;
@@ -145,7 +146,7 @@
     left: 0%;
     max-width: 25%;
     padding: 15px;
-    background-color: #00152c;
+    background-color: #2c2c2c;
     border-bottom: 4px solid #fbbe28;
 }
 .report-input {
@@ -164,12 +165,18 @@
 .line {
     position: fixed;
     width: 100%;
-    height: 1.5%;
-    background-color: #fbbe28;
+    height: 3%;
+    background-image: linear-gradient(to right, rgb(251, 190, 40),  rgb(251, 190, 40)calc(3% - 3px), rgba(0,0,0,0) calc(3% - 3px), rgba(0,0,0,0) calc(3% + 161px), rgb(251, 190, 40) calc(3% + 161px), rgb(251, 190, 40));
+}
+.line2 {
+    position: fixed;
+    width: 100%;
+    height: 3%;
+    background: rgb(251, 190, 40);
 }
 .modal-content {
     position: relative;
-    background-color: #011b37;
+    background-color: #373737;
     margin: auto;
     padding: 0;
     margin: 0 auto;
@@ -205,7 +212,7 @@
 }
 .img-block {
     padding: 5px;
-    color: #011b37;
+    color: #373737;
     background-color: #fbbe28;
     border: 2px solid rgb(254, 190, 40);
     position: absolute;
